[package]
name = "mqttexample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
paho-mqtt = { version = "*", default-features = false, features = ["bundled"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
#strip = "debuginfo"
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
#panic = "abort"
